--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       NEXT_TELEMETRY_DISABLED: 1
-      NEXT_PUBLIC_STORY_VIDEO_URL: ${{ vars.NEXT_PUBLIC_STORY_VIDEO_URL }}
+      NEXT_PUBLIC_STORY_VIDEO_URL: https://www.youtube.com/watch?v=LZymeRtax3Q
     steps:
       - name: Checkout repository
         uses: actions/checkout@v5
